--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<h5>Mais Informações:</h5>
 				
 				<a href="https://www.facebook.com/cinthya.vieira1" target="_blank"><img src="imagens\facebook.png" height="45" width="45" alt="facebook" /></a>
-				<a href="" target="_blank"><img src="imagens\github2.png" height="43" width="43" alt="github" /></a>
+				<a href="https://github.com/cinthya-vieira/cinthya-vieira.github.io" target="_blank"><img src="imagens\github2.png" height="43" width="43" alt="github" /></a>
 				
 		</footer>
 		</font>
