--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			<center><img src="imagens/avatar.jpg" alt= "Imagem" width="40%" height="40%"></center>
 			<h2>Cinthya Vieira da Silva Rodrigues</h2>
 			
+			<button onclick="funcao()"> Mudar a Cor </button>
+			
 		</header>
 		
 		<br /><br />
