--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
 		<br /><br />
 	
 			<ul>
-				<li>Endereço: Xavier de Magalhães, 81</li>
-				<li>Bairro: Jd. dos Manacás</li>
-				<li>Cep: 04844-120</li>
-				<li>São Paulo, SP</li>
-				<li>Tel. Residencial: 5928-4804</li>
-				<li>Celular: 985340798</li>
+				<li>Tel. Residencial: 0102-0205</li>
+				<li>Celular: 98508-6594</li>
 				<li>E-mail: cinthya-vieira@outlook.com</li>
 	    	</ul>
 			
